Add dialog + form

--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -1,6 +1,5 @@
 <mat-toolbar color="primary">
     <span>Tableau de bord</span>
     <span class="menu-bar-spacer"></span>
-    <mat-icon class="menu-bar-icon">favorite</mat-icon>
-    <mat-icon class="menu-bar-icon">delete</mat-icon>
+    <!--mat-icon class="menu-bar-icon">favorite</mat-icon-->
 </mat-toolbar>
