--- a/src/app/inspection-detail/inspection-detail.component.html
+++ b/src/app/inspection-detail/inspection-detail.component.html
@@ -1,7 +1,48 @@
 <h1 mat-dialog-title>Détail de l'inspection</h1>
 <div mat-dialog-content>
-
+    <mat-tab-group [color]="primary" [backgroundColor]="primary">
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon class="example-tab-icon">thumb_up</mat-icon>
+            Inspection
+          </ng-template>
+            <form [formGroup]="inspectionForm" class="dialog-form-container">
+              <mat-form-field>
+                <input matInput placeholder="Numéro" formControlName="id" >
+              </mat-form-field>
+              <mat-form-field>
+                <textarea matInput placeholder="Description" formControlName="designation"></textarea>
+              </mat-form-field>
+              <mat-form-field>
+                <input matInput placeholder="Statut" formControlName="statut" >
+              </mat-form-field>
+              <mat-form-field>
+                <input matInput placeholder="Type d'inspection" formControlName="type" >
+              </mat-form-field>
+              <mat-form-field>
+                <input matInput placeholder="Date prévue" formControlName="datePrevue" >
+              </mat-form-field>
+            </form>
+        </mat-tab>
+      
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon class="example-tab-icon">thumb_up</mat-icon>
+            Ordre
+          </ng-template>
+          Content 2
+        </mat-tab>
+      
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon class="example-tab-icon">thumb_up</mat-icon>
+            Avis
+          </ng-template>
+      
+          Content 3
+        </mat-tab>
+      </mat-tab-group>
 </div>
 <div mat-dialog-actions>
-  <button mat-raised-button (click)="inspectionDialogCLose()">Fermer</button>
+  <button mat-raised-button (click)="inspectionDialogClose()" color="primary">Fermer</button>
 </div>
