--- a/src/app/inspections/inspections.component.html
+++ b/src/app/inspections/inspections.component.html
@@ -17,7 +17,7 @@
             <td mat-cell *matCellDef="let inspection">
             <ng-container *ngIf="sameDate(column,inspection.datePrevue)">
               <div class="custom-cell-content">
-                <button mat-icon-button color="primary">
+                <button mat-icon-button color="primary" (click)="openInspectionDetail()">
                     <mat-icon>launch</mat-icon>
                 </button>
               </div>
