--- a/src/app/inspection-detail/inspection-detail.component.css
+++ b/src/app/inspection-detail/inspection-detail.component.css
@@ -1,6 +1,7 @@
 .dialog-form-container {
     display: flex;
     flex-direction: column;
+    margin-top: 16px;
   }
   
   .dialog-form-container > * {
