--- a/src/app/inspection-detail/inspection-detail.component.html
+++ b/src/app/inspection-detail/inspection-detail.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Détail de l'inspection</h1>
+<h1 mat-dialog-title>Détail de l'inspection {{ inspection.id }}</h1>
 <div mat-dialog-content>
     <mat-tab-group [color]="primary" [backgroundColor]="primary">
         <mat-tab>
