--- a/src/app/inspection-detail/inspection-detail.component.html
+++ b/src/app/inspection-detail/inspection-detail.component.html
@@ -3,9 +3,12 @@
     <mat-tab-group [color]="primary" [backgroundColor]="primary">
         <mat-tab>
           <ng-template mat-tab-label>
-            <mat-icon class="example-tab-icon">thumb_up</mat-icon>
+            <mat-icon class="example-tab-icon">build</mat-icon>
             Inspection
           </ng-template>
+            <div class="dialog-qrcode-container">
+                <qrcode [qrdata]="'https://www.google.com/'+inspection.id" [size]="128" [level]="'M'"></qrcode>
+            </div>
             <form [formGroup]="inspectionForm" class="dialog-form-container">
               <mat-form-field>
                 <input matInput placeholder="Numéro" formControlName="id" >
@@ -23,24 +26,41 @@
                 <input matInput placeholder="Date prévue" formControlName="datePrevue" >
               </mat-form-field>
             </form>
-        </mat-tab>
-      
+        </mat-tab>      
         <mat-tab>
           <ng-template mat-tab-label>
-            <mat-icon class="example-tab-icon">thumb_up</mat-icon>
-            Ordre
-          </ng-template>
-          Content 2
-        </mat-tab>
-      
-        <mat-tab>
-          <ng-template mat-tab-label>
-            <mat-icon class="example-tab-icon">thumb_up</mat-icon>
+            <mat-icon class="example-tab-icon">assignment</mat-icon>
             Avis
           </ng-template>
-      
-          Content 3
+          <form [formGroup]="avisForm" class="dialog-form-container">
+              <mat-form-field>
+                <input matInput placeholder="Numéro" formControlName="id" >
+              </mat-form-field>
+              <mat-form-field>
+                  <input matInput placeholder="Type" formControlName="type" >
+              </mat-form-field>
+              <mat-form-field>
+                <input matInput placeholder="Cycle" formControlName="cycle" >
+              </mat-form-field>
+              <mat-form-field>
+                <input matInput placeholder="Dernière Inspection" formControlName="last_inspection" >
+              </mat-form-field>
+              <mat-form-field>
+                <input matInput placeholder="Prochaine Inspection" formControlName="next_inspection" >
+              </mat-form-field>
+            </form>
         </mat-tab>
+        <mat-tab>
+            <ng-template mat-tab-label>
+              <mat-icon class="example-tab-icon">account_balance</mat-icon>
+              Ordre
+            </ng-template>
+            <form [formGroup]="ordreForm" class="dialog-form-container">
+                <mat-form-field>
+                  <input matInput placeholder="Numéro" formControlName="id" >
+                </mat-form-field>
+              </form>
+          </mat-tab>
       </mat-tab-group>
 </div>
 <div mat-dialog-actions>
